--- a/FreeRTOS/Demo/CORTEX_A72_64-bit_Raspberrypi4/uart/Makefile
+++ b/FreeRTOS/Demo/CORTEX_A72_64-bit_Raspberrypi4/uart/Makefile
@@ -1,4 +1,4 @@
-CROSS ?= aarch64-none-elf-
+CROSS ?= /home/joseph/rpi_freertos/raspi4_freertos/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-elf/bin/aarch64-none-elf-
 CFLAGS = -mcpu=cortex-a72 \
          -fpic \
          -ffreestanding \
